Content Updated with cricle

--- a/assinments/Css/01 Basic/case 01/index.html
+++ b/assinments/Css/01 Basic/case 01/index.html
@@ -38,6 +38,30 @@
             right: 0;
             bottom: 0;
         }
+        main>div:first-of-type{
+            position: absolute;
+            width: 230px;
+            height: 230px;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            top: 0;
+            border: 1px solid white;
+            margin: auto;
+            background-color: white;
+        }
+        main>div:first-of-type>div{
+            width: 120px;
+            height: 120px;
+            background-color: red;
+            position: absolute;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+            border-radius: 100%;
+        }
     </style>
 </head>
 <body>
@@ -46,6 +70,14 @@
     <section></section>
     <section></section>
     <section></section>
+
+    <!----Center Box---->
+    <div>
+        <!----Center circle---->
+        <div>
+
+        </div>
+    </div>
 </main>
 </body>
 </html>
