--- a/assinments/Css/01 Basic/case 01/index.html
+++ b/assinments/Css/01 Basic/case 01/index.html
@@ -16,6 +16,29 @@
             width: 50vw;
             position: absolute;
         }
+        main>section>div{
+            width: 250px;
+            height: 250px;
+            background-color: white;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+            position: absolute;
+            border-radius: 100%;
+        }
+        main>section>div>div{
+            width: 100px;
+            height: 100px;
+            background-color: red;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+            position: absolute;
+        }
         main>section:nth-child(1){
             background-color: red;
             left: 0;
@@ -63,8 +86,8 @@
             border-radius: 100%;
         }
         main > div:nth-child(6),div:nth-child(7),div:nth-child(8),div:nth-child(9){
-            width: 155px;
-            height: 155px;
+            width: 110px;
+            height: 120px;
             background-color: white;
             border: 2px solid white;
             position: absolute;
@@ -119,10 +142,27 @@
 </head>
 <body>
 <main>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+    <!----Main Sections And Circle---->
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
 
     <!----Center Box---->
     <div>
