--- a/assinments/Css/01 Basic/case 01/index.html
+++ b/assinments/Css/01 Basic/case 01/index.html
@@ -7,7 +7,7 @@
     <style>
         main{
             height: 100vh;
-            width: 100vw;
+            width: 99vw;
             position: relative;
         }
         main>section{
@@ -15,6 +15,9 @@
             height: 50vh;
             width: 50vw;
             position: absolute;
+        }
+        ::-webkit-scrollbar-thumb{
+            background: #3ba7ac;
         }
         main>section>div{
             width: 250px;
@@ -71,7 +74,7 @@
             top: 0;
             border: 1px solid white;
             margin: auto;
-            background-color: white;
+            background-color: white;q
         }
         main>div:first-of-type>div{
             width: 120px;
@@ -141,6 +144,7 @@
 
 </head>
 <body>
+
 <main>
     <!----Main Sections And Circle---->
     <section>
@@ -181,5 +185,6 @@
     <div></div>
 
 </main>
+
 </body>
 </html>
