--- a/assinments/Css/01 Basic/case 02/Index.html
+++ b/assinments/Css/01 Basic/case 02/Index.html
@@ -6,38 +6,197 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <meta name="viewpoint" content="width=device-width initioal-scale=1">
     <link rel="icon" href="assets/css/images/ijse.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1881f70793.js" crossorigin="anonymous"></script>
     <style>
+        *{
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body{
+            min-height: 100vh;
+        }
+
         header{
             background: white;
-            border: 1px solidred;
-            position: relative;
-        }
-        header>images{
-                width: 100px;
-
-        }
-        header>nav{
-           position: absolute;
-            right: 0;
+            box-shadow: 0px -1px 8px 2px #1c1717e8;
+            position: fixed;
+            width: 100%;
             top: 0;
+            height: 64px;
+            z-index: 2;
         }
+
+        header>nav{
+            position: absolute;
+            top: 0;
+            right: 20px;
+        }
+
+        header > img {
+            position: relative;
+            width: 166px;
+            height: 59px;
+            top: 4px;
+            left: 20px;
+        }
+
         header>nav>ul>li{
             display: inline-block;
             padding: 10px;
         }
+
+        main{
+            position: relative;
+            margin-top: 65px;
+        }
+
+        main>nav{
+            position: absolute;
+            background: #9c27b0;
+            top: 0;
+            bottom: 0;
+            width: 200px;
+        }
+
+        main>section{
+            margin-left: 200px;
+            padding: 10px;
+        }
+
+        footer{
+            height: 30px;
+            background-color: gray;
+        }
+
+        footer>h4{
+            text-align: center;
+            margin-top: 0;
+            padding-top: 7px;
+        }
+
+        main>nav>ul>li{
+            list-style: none;
+            color: white;
+            padding-top: 30px;
+        }
+
+        main>nav>ul>li>i{
+            padding-right: 5px;
+        }
+
+        main>nav>ul>li>a{
+            text-decoration: none;
+            color: white;
+        }
+
+        main>nav>ul>li:hover i{
+            color: orange;
+        }
+
+        main>nav>ul>li:hover a{
+            color: orange;
+        }
+
+        main>section>section:first-child{
+            height: 300px;
+            position: relative;
+        }
+
+        main>section>section:first-child>div{
+            height: 100%;
+            width: calc(100% / 3);
+            position: absolute;
+        }
+
+        main>section>section:first-child>div:nth-child(1){
+            background: url("assets/images/gif.gif");
+            left: 0;
+        }
+
+        main>section>section:first-child>div:nth-child(2){
+            background: url("assets/images/gif.gif");
+            left: calc(100%/3);
+        }
+
+        main>section>section:first-child>div:nth-child(3){
+            background: url("assets/images/gif.gif");
+            right: 0;
+        }
     </style>
 </head>
+
 <body>
-    <header>
-        <img src="assets/images/ijse.png" alt="logo">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Services</li>
-                <li>Contact</li>
-                <li>About Us</li>
-            </ul>
-        </nav>
-    </header>
+<!--Nav Bar-->
+<header>
+    <img src="assets/images/ijse.png" alt="logo">
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Services</li>
+            <li>Contacts</li>
+            <li>About Us</li>
+        </ul>
+    </nav>
+</header>
+
+<!--Content-->
+<main>
+    <nav>
+        <ul>
+            <li>
+                <i class="fa-solid fa-house"></i>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <i class="fa-solid fa-bell-concierge"></i>
+                <a href="#">Services</a>
+            </li>
+            <li>
+                <i class="fa-solid fa-phone"></i>
+                <a href="#">Contacts</a>
+            </li>
+            <li>
+                <i class="fa-solid fa-address-card"></i>
+                <a href="#">About Us</a>
+            </li>
+        </ul>
+    </nav>
+    <section>
+        <section>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+        <section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquid debitis deleniti doloremque eligendi est eum excepturi fugit molestiae molestias obcaecati, officiis perspiciatis quae, quasi quisquam repudiandae, sed voluptatibus.</p>
+        </section>
+    </section>
+</main>
+
+<footer>
+    <h4>Developed by IJSE</h4>
+</footer>
 </body>
 </html>
