--- a/assinments/Css/01 Basic/case 03/index.html
+++ b/assinments/Css/01 Basic/case 03/index.html
@@ -6,6 +6,63 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
 
     <style>
+        body {
+            margin: 0;
+            color: white;
+        }
+        body > section:first-of-type {
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+        }
+        body > section:nth-child(1) > div:first-of-type {
+            width: 350px;
+            height: 350px;
+            position: fixed;
+            display: inline-block;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            border-radius: 200px;
+            background-color: transparent;
+            border: 15px solid brown;
+        }
+        body > section:nth-child(1) > div:first-of-type > div {
+            width: 332px;
+            height: 330px;
+            position: fixed;
+            display: flex;
+            border: 10px solid red;
+            border-radius: 174px;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            justify-content: center;
+        }
+        body > section:nth-child(2){
+            position: absolute;
+            width: 100vw;
+            height: 100vh;
+        }
+
+        body > section:nth-child(2) > div:nth-child(1){
+            position: absolute;
+            height: 337px;
+            width: 336px;
+            background-color: #9c27b0;
+            display: inline-block;
+            border-radius: 244px;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            z-index: -1;
+        }
 
     </style>
 </head>
