--- a/assinments/Css/01 Basic/case 03/index.html
+++ b/assinments/Css/01 Basic/case 03/index.html
@@ -11,7 +11,7 @@
         }
         body {
             margin: 0;
-            color: #ffffff;
+            color: #bb1717;
         }
         body > section:first-of-type {
             position: fixed;
@@ -110,6 +110,30 @@
             z-index: -1;
         }
 
+        #hello {
+            position: absolute;
+            display: inline-block;
+            padding-top: 134px;
+            font-size: 50px;
+            padding-left: 112px;
+            margin: 0;
+        }
+        #welcome {
+            position: absolute;
+            display: inline-block;
+            padding-top: 134px;
+            font-size: 50px;
+            padding-left: 40px;
+            margin: 0;
+        }
+        #ijse {
+            position: absolute;
+            display: inline-block;
+            padding-top: 74px;
+            font-size: 50px;
+            padding-left: 40px;
+            margin: 0;
+        }
 
     </style>
 </head>
@@ -117,19 +141,27 @@
 <body>
 
 <section>
-    <div></div>
+    <div>
+
+    </div>
 </section>
 
 <section>
-    <div></div>
+    <div>
+      <h3 id="hello">Hello</h3>
+    </div>
 </section>
 
 <section>
-    <div></div>
+    <div>
+        <h3 id="welcome">Welcome to</h3>
+    </div>
 </section>
 
 <section>
-    <div></div>
+    <div>
+        <h3 id="ijse">Institue Of Software Engineering</h3>
+    </div>
 </section>
 
 </body>
