--- a/assinments/Css/01 Basic/case 03/index.html
+++ b/assinments/Css/01 Basic/case 03/index.html
@@ -11,7 +11,7 @@
         }
         body {
             margin: 0;
-            color: #bb1717;
+            color: #36160B;
         }
         body > section:first-of-type {
             position: fixed;
@@ -30,7 +30,7 @@
             margin: auto;
             border-radius: 200px;
             background-color: transparent;
-            border: 15px solid #c61616;
+            border: 15px solid #295396;
         }
         body > section:nth-child(1) > div:first-of-type > div {
             width: 332px;
@@ -56,7 +56,7 @@
             position: absolute;
             height: 337px;
             width: 336px;
-            background-color: #720787;
+            background-color: #f5746a;
             display: inline-block;
             border-radius: 244px;
             top: 0;
@@ -77,7 +77,7 @@
             position: absolute;
             height: 337px;
             width: 336px;
-            background-color: #f6eb22;
+            background-color: #facf4c;
             display: inline-block;
             border-radius: 244px;
             top: 60px;
@@ -99,7 +99,7 @@
             position: absolute;
             height: 337px;
             width: 336px;
-            background-color: #421507;
+            background-color: #943c76;
             display: inline-block;
             border-radius: 244px;
             top: 0;
