--- a/assinments/Css/01 Basic/case 04/index.html
+++ b/assinments/Css/01 Basic/case 04/index.html
@@ -12,22 +12,22 @@
 </head>
 <body>
     <section>
-        <div></div>
+        <header></header>
         <section></section>
     </section>
 
     <section>
-        <div></div>
+        <header></header>
         <section></section>
     </section>
 
     <section>
-        <div></div>
+        <header></header>
         <section></section>
     </section>
 
     <section>
-        <div></div>
+        <header></header>
         <section></section>
     </section>
 
