--- a/assinments/Css/01 Basic/case 04/index.html
+++ b/assinments/Css/01 Basic/case 04/index.html
@@ -55,7 +55,7 @@
         }
 
         body > section:nth-child(2) > header {
-            background-color: darkblue;
+            background-color: #6788ce;
             top: 0;
             position: sticky;
             height: 50px;
@@ -78,7 +78,40 @@
             top: calc(90vh/2);
             font-size: 100px;
             margin: 0;
+        } body > section:nth-child(3) {
+              position: relative;
+              background-color: #424141;
+              width: 100vw;
+              height: 100vh;
+          }
+
+        body > section:nth-child(3) > header {
+            background-color: #8b1774;
+            top: 0;
+            position: sticky;
+            height: 50px;
+            width: 100vw;
         }
+
+        body > section:nth-child(3) > header > h4 {
+            display: inline-block;
+            color: white;
+            padding-left: 10px;
+            padding-top: 10px;
+            font-size: 20px;
+            margin: 0;
+        }
+
+        body > section:nth-child(3) > h1 {
+            display: inline-block;
+            position: absolute;
+            left: calc(90vw/2);
+            top: calc(90vh/2);
+            font-size: 100px;
+            margin: 0;
+        }
+
+
 
 
     </style>
