--- a/assinments/Css/01 Basic/case 04/index.html
+++ b/assinments/Css/01 Basic/case 04/index.html
@@ -110,7 +110,38 @@
             font-size: 100px;
             margin: 0;
         }
+        body > section:nth-child(4) {
+            position: relative;
+            background-color: #ee5252;
+            width: 100vw;
+            height: 100vh;
+        }
 
+        body > section:nth-child(4) > header {
+            background-color: rgba(215, 168, 29, 0.88);
+            top: 0;
+            position: sticky;
+            height: 50px;
+            width: 100vw;
+        }
+
+        body > section:nth-child(4) > header > h4 {
+            display: inline-block;
+            color: white;
+            padding-left: 10px;
+            padding-top: 10px;
+            font-size: 20px;
+            margin: 0;
+        }
+
+        body > section:nth-child(4) > h1 {
+            display: inline-block;
+            position: absolute;
+            left: calc(90vw/2);
+            top: calc(90vh/2);
+            font-size: 100px;
+            margin: 0;
+        }
 
 
 
