--- a/assinments/Css/01 Basic/case 04/index.html
+++ b/assinments/Css/01 Basic/case 04/index.html
@@ -14,6 +14,7 @@
             margin: 0;
         }
 
+        /*Main section one*/
         body > section:nth-child(1) {
             position: relative;
             background-color: orange;
@@ -47,6 +48,7 @@
             margin: 0;
         }
 
+        /*Main section two*/
         body > section:nth-child(2) {
             position: relative;
             background-color: #436f95;
@@ -78,6 +80,8 @@
             top: calc(90vh/2);
             font-size: 100px;
             margin: 0;
+
+            /*Main section Three*/
         } body > section:nth-child(3) {
               position: relative;
               background-color: #424141;
@@ -110,6 +114,8 @@
             font-size: 100px;
             margin: 0;
         }
+
+        /*Main section four*/
         body > section:nth-child(4) {
             position: relative;
             background-color: #ee5252;
