--- a/assinments/Css/01 Basic/case 05/assets/index.html
+++ b/assinments/Css/01 Basic/case 05/assets/index.html
@@ -22,6 +22,37 @@
             background-size: cover;
             box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
         }
+        section>div:nth-child(1){
+            background: url("image/img2.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(2){
+            background: url("image/img3.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(3){
+            background: url("image/img4.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(4){
+            background: url("image/img5.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(5){
+            background: url("image/img6.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(6){
+            background: url("image/img7.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+
 
     </style>
 
