--- a/assinments/Css/01 Basic/case 05/assets/index.html
+++ b/assinments/Css/01 Basic/case 05/assets/index.html
@@ -52,7 +52,36 @@
             background-position: center;
             background-size: cover;
         }
-
+        section>div:nth-child(7){
+            background: url("image/img9.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(8){
+            background: url("image/img10.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(9){
+            background: url("image/img11.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(10){
+            background: url("image/img12.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(11){
+            background: url("image/page1.webp");
+            background-position: center;
+            background-size: cover;
+        }
+        section>div:nth-child(12){
+            background: url("image/img8.jpg");
+            background-position: center;
+            background-size: cover;
+        }
 
     </style>
 
