--- a/assinments/Css/01 Basic/case 06/index.html
+++ b/assinments/Css/01 Basic/case 06/index.html
@@ -24,7 +24,29 @@
         section>div{
             box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
         }
-
+        section>div:nth-child(1){
+            grid-row: 1/2;
+            grid-column: 1/3;
+            background: url("assets/images/img11.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+        section>div:nth-child(2){
+            background: url("assets/images/img10.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+        section>div:nth-child(3){
+            grid-row: 1/4;
+            grid-column: 4/5;
+            background: url("assets/images/img2.jpg");
+            background-size: cover;
+        }
+        section>div:nth-child(4) {
+            background: url("assets/images/img5.jpg");
+            background-size: cover;
+            background-position: center;
+        }
     </style>
 </head>
 <body>
