--- a/assinments/Css/01 Basic/case 06/index.html
+++ b/assinments/Css/01 Basic/case 06/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>case 06</title>
+    <link rel="stylesheet" href="assets/css/normalize.css">
 
     <style>
         ::-webkit-scrollbar{
             margin: 0;
         }
         section{
-            width: 1200px;
-            height: 600px;
+            width: 1400px;
+            height: 700px;
             left: 0;
             right: 0;
             top: 50px;
@@ -19,7 +20,7 @@
             display: grid;
             grid-template-rows: repeat(3,1fr);
             grid-template-columns: repeat(4,1fr);
-            gap: 9px;
+            gap: 1px;
         }
         section>div{
             box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
@@ -47,6 +48,17 @@
             background-size: cover;
             background-position: center;
         }
+        section>div:nth-child(5){
+            background: url("assets/images/img9.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+        section>div:nth-child(6){
+            background: url("assets/images/img3.jpg");
+            background-size: cover;
+            background-position: center;
+
+
     </style>
 </head>
 <body>
