--- a/assinments/Css/01 Basic/case 06/index.html
+++ b/assinments/Css/01 Basic/case 06/index.html
@@ -53,12 +53,22 @@
             background-size: cover;
             background-position: center;
         }
-        section>div:nth-child(6){
+        section>div:nth-child(6) {
             background: url("assets/images/img3.jpg");
             background-size: cover;
             background-position: center;
-
-
+        }
+        section>div:nth-child(7){
+            background: url("assets/images/img4.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+        section>div:nth-child(8){
+            grid-row: 3/4;
+            grid-column: 2/4;
+            background: url("assets/images/img7.jpg");
+            background-size: cover;
+        }
     </style>
 </head>
 <body>
