--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
                 <img alt="home image" src="assets/img/Profile/headerimg.PNG">
             </div>
             <nav>
-                <article></article>
+                <article>
+                    <a href="#about">About</a>
+                    <a href="#service">Education</a>
+                    <a href="#skills">Portfolio</a>
+                    <a href="#project">Service</a>
+                    <a href="#contact">Contact</a>
+                </article>
             </nav>
     </header>
 
